[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vces-dstar-lite"
version = "0.1.0"
description = "Visibility-Constrained Edge-State D* Lite replanning for a 9x9 edge-obstacle maze."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "KAMURAN YILAMU"}
]
keywords = ["robotics", "path-planning", "d-star-lite", "maze", "ros1", "grid"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
vces-dstar-lite = "vces_dstar_lite.core:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
